--- a/styles/index.css
+++ b/styles/index.css
@@ -17,7 +17,7 @@
   --primary-highlight: var(--gold-soundz);
   --secondary-highlight: var(--neon-watermelon);
   --primary-gray: #dfdfdf;
-  --danger: white;
+  --danger: red;
 }
 
 html {
@@ -76,12 +76,11 @@ aside.form form select {
   border-radius: 0;
   border-style: solid;
   box-sizing: border-box;
-  color: ghostwhite;
+  color: black;
   display: block;
   margin: 5px 0;
   padding: 5px;
   width: 100%;
-  color: aliceblue;
 }
 
 aside.form form button,
@@ -112,7 +111,7 @@ aside.form form button[type="submit"]:hover {
 #error {
   display: none;
   padding: 15px 0;
-  background: var(--primary-gray);
+  background: var(--danger);
   border-radius: 5px;
   margin: 30px 0;
 }
@@ -120,6 +119,7 @@ aside.form form button[type="submit"]:hover {
 #error li {
   color: var(--primary-color);
   margin: 5px 0;
+  color:yellow;
 }
 
 .guest-list article {
@@ -174,6 +174,10 @@ aside.form form button[type="submit"]:hover {
   font-weight: bold;
   margin-top: 10px;
   padding: 10px 20px;
+  
+}
+
+.bounce{
   cursor: not-allowed;
 }
 
@@ -194,6 +198,7 @@ aside.form form button[type="submit"]:hover {
 }
 
 .out-vip {
+  background-color: #06d6a0;
 }
 
 .in-vip {
